fixed spacing issues I was having in the mobile size for the bootstrap grid. Performed some boolean refactoring and css setter refactoring in the script. Made some other small changes to the CSS file as well.

--- a/Portfolio Site/custom.css
+++ b/Portfolio Site/custom.css
@@ -91,11 +91,11 @@ section#Resume {
 }
 
 .project1.button {
-    visibility: hidden;
+    display: none;
 }
 
 .escape.button {
-    visibility: hidden;
+    display: none;
 }
 
 #Contact {
@@ -109,7 +109,8 @@ section#Resume {
 /* Whack-a-Mole CSS */
 
 .moleProject {
-    visibility: hidden;
+    display: none;
+    margin-bottom: 5vh;
 }
 
 .eye {
